Do not export fully inlined class

Exporting a class deriving from QPair fails
in MSVC 2015 RTM after commit 226ce6020ee4eb in
qtbase.

Task-number: QTBUG-49658
Change-Id: Id07e620a4a2d0f454232f349a51380170f5230ce
Reviewed-by: Marc Mutz <marc.mutz@kdab.com>
Reviewed-by: Jędrzej Nowacki <jedrzej.nowacki@theqtcompany.com>